src/main/java/com/example/project1/_core/errors/exception/Exception500.java
package com.example.project1._core.errors.exception;

public class Exception500 extends RuntimeException {
    public Exception500(String msg){
        super(msg);
    }
}
